// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`register registerFieldMiddleware 1`] = `
Object {
  "": Object {
    "displayName": "FormState",
    "editable": undefined,
    "errors": Array [],
    "initialValues": Object {
      "aa": "123",
    },
    "initialized": true,
    "invalid": false,
    "loading": false,
    "mounted": true,
    "pristine": false,
    "props": Object {},
    "submitting": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "values": Object {
      "aa": "aa change",
    },
    "warnings": Array [],
  },
  "aa": Object {
    "active": false,
    "display": true,
    "displayName": "FieldState",
    "editable": undefined,
    "effectErrors": Array [],
    "effectWarnings": Array [],
    "errors": Array [],
    "formEditable": undefined,
    "initialValue": "123",
    "initialized": true,
    "invalid": false,
    "loading": false,
    "modified": true,
    "mounted": true,
    "name": "aa",
    "pristine": false,
    "props": Object {
      "default": "123",
      "parent": undefined,
      "type": "string",
      "x-component": "",
      "x-props": Object {
        "data-testid": "input",
      },
    },
    "required": false,
    "rules": Array [],
    "touched": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "value": "aa change",
    "values": Array [
      "aa change",
    ],
    "visible": true,
    "visited": false,
    "warnings": Array [],
  },
}
`;

exports[`register registerFormField 1`] = `
Object {
  "": Object {
    "displayName": "FormState",
    "editable": undefined,
    "errors": Array [],
    "initialValues": Object {
      "aa": "123",
    },
    "initialized": true,
    "invalid": false,
    "loading": false,
    "mounted": true,
    "pristine": false,
    "props": Object {},
    "submitting": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "values": Object {
      "aa": "aa change",
    },
    "warnings": Array [],
  },
  "aa": Object {
    "active": false,
    "display": true,
    "displayName": "FieldState",
    "editable": undefined,
    "effectErrors": Array [],
    "effectWarnings": Array [],
    "errors": Array [],
    "formEditable": undefined,
    "initialValue": "123",
    "initialized": true,
    "invalid": false,
    "loading": false,
    "modified": true,
    "mounted": true,
    "name": "aa",
    "pristine": false,
    "props": Object {
      "default": "123",
      "parent": undefined,
      "type": "string",
      "x-component": "",
      "x-props": Object {
        "data-testid": "input",
      },
    },
    "required": false,
    "rules": Array [],
    "touched": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "value": "aa change",
    "values": Array [
      "aa change",
    ],
    "visible": true,
    "visited": false,
    "warnings": Array [],
  },
}
`;

exports[`register registerVirtualBox 1`] = `
Object {
  "": Object {
    "displayName": "FormState",
    "editable": undefined,
    "errors": Array [],
    "initialValues": Object {
      "aa": "123",
    },
    "initialized": true,
    "invalid": false,
    "loading": false,
    "mounted": true,
    "pristine": false,
    "props": Object {},
    "submitting": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "values": Object {
      "aa": "aa change",
    },
    "warnings": Array [],
  },
  "aa": Object {
    "active": false,
    "display": true,
    "displayName": "FieldState",
    "editable": undefined,
    "effectErrors": Array [],
    "effectWarnings": Array [],
    "errors": Array [],
    "formEditable": undefined,
    "initialValue": "123",
    "initialized": true,
    "invalid": false,
    "loading": false,
    "modified": true,
    "mounted": true,
    "name": "cc.aa",
    "pristine": false,
    "props": Object {
      "default": "123",
      "parent": undefined,
      "type": "string",
      "x-component": "",
      "x-props": Object {
        "data-testid": "input",
      },
    },
    "required": false,
    "rules": Array [],
    "touched": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "value": "aa change",
    "values": Array [
      "aa change",
    ],
    "visible": true,
    "visited": false,
    "warnings": Array [],
  },
  "cc": Object {
    "display": true,
    "displayName": "VirtualFieldState",
    "initialized": true,
    "mounted": false,
    "name": "cc",
    "props": Object {
      "parent": undefined,
      "type": "object",
      "x-component": "box",
    },
    "unmounted": false,
    "visible": true,
  },
  "cc.aa": Object {
    "active": false,
    "display": true,
    "displayName": "FieldState",
    "editable": undefined,
    "effectErrors": Array [],
    "effectWarnings": Array [],
    "errors": Array [],
    "formEditable": undefined,
    "initialValue": "123",
    "initialized": true,
    "invalid": false,
    "loading": false,
    "modified": true,
    "mounted": true,
    "name": "cc.aa",
    "pristine": false,
    "props": Object {
      "default": "123",
      "parent": undefined,
      "type": "string",
      "x-component": "",
      "x-props": Object {
        "data-testid": "input",
      },
    },
    "required": false,
    "rules": Array [],
    "touched": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "value": "aa change",
    "values": Array [
      "aa change",
    ],
    "visible": true,
    "visited": false,
    "warnings": Array [],
  },
}
`;
